# InterviewIQ

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 061cbab8103a_create_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  health.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: redis.py  session.py
backend/app/models/: user.py
backend/app/schemas/: auth.py  user.py
backend/app/services/: auth_service.py
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
